@@ -1,4 +1,5 @@
 [master]
+    - Removes option to set a custom icon for the external file types. This is not possible anymore with the new icon font.
     - Fixes bug when having added and then removed a personal journal list, an exception is always shown on startup
     - Removes legacy options to sync files in the "pdf" or "ps" field
     - Removes button to merge entries and keep the old ones.
